--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rafipatel.github.io/rafi",
+  "homepage": "https://rkii939b.github.io/rk",
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
